Fix missalignment on buttons with loader

--- a/src/components/btn/btn-default.ios.styl
+++ b/src/components/btn/btn-default.ios.styl
@@ -14,8 +14,10 @@
   .q-icon
     font-size 1.4em
   .q-spinner
-    height 1.39em
-    width 1.39em
+    height 1.4em
+    width 1.4em
+  .q-btn-inner:before
+    content ''
 
   &.disabled
     opacity .7 !important
@@ -62,7 +64,6 @@
     margin-right 6px
   .on-right
     margin-left 6px
-
 
 .q-btn-fab, .q-btn-fab-mini
   .q-icon
